Added Sell Page, changed nav (#27)
* Added sign up page

* Directories Fixed

* Updated Home Page with Mock Data

* Fixed headers

* Updated signup Log In Modal

* List Item Page nav created

--- a/Final/index.html
+++ b/Final/index.html
@@ -40,7 +40,12 @@
       <!-- Off Canvas Nav -->
       <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
         <div class="offcanvas-header">
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav flex-fill justify-content-between pt-2">
@@ -78,7 +83,7 @@
       </div>
     </nav>
   </header>
-  <!-- Top Items of RL with carousel  -->
+<!-- Top Items of RL with carousel  -->
   <section class="container-xxl py-5">
     <h2 class="sec-head-1 pb-3">Top Items</h2>
     <div id="top-item-carousel" class="carousel carousel-light bg-dark slide">
