--- a/Final/resources/pages/product-page.html
+++ b/Final/resources/pages/product-page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
     <!--meta tags-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,15 +15,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../stylesheets/style.css" />
     <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"
-        defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <!-- custom js -->
     <script src="../scripts/index.js" defer></script>
     <title>Rensselaer List</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Site Header -->
     <header class="container-xxl">
         <!-- Site Nav Bar -->
@@ -72,12 +74,39 @@
                         </li>
                         <li class="nav-item black-line"></li>
                         <li class="nav-item ps-3">
-                            <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
+                            <a class="btn btn-primary nav-btn" href="#" role="button">
+                            
+                            </a>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </nav>
+              </form>
+              <li class="nav-item ms-lg-auto">
+                <a class="nav-link" href="#">Sign Up</a>
+              </li>
+              <li class="nav-item pe-2">
+                <a
+                  class="nav-link"
+                  href="#"
+                  data-bs-toggle="modal"
+                  data-bs-target="#log-in-modal"
+                  role="button"
+                  >Log In</a
+                >
+              </li>
+              <li class="nav-item black-line"></li>
+              <li class="nav-item ps-3">
+                <a
+                  class="btn btn-primary nav-btn"
+                  href="list-item.html"
+                  role="button"
+                  >Sell</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <!-- product details section -->
     <section class="container-xxl pt-5">
@@ -122,6 +151,7 @@
                         is solid.</p>
                 </div>
             </div>
+          </div>
         </div>
     </section>
     <!-- Similar Items Section -->
@@ -225,6 +255,7 @@
                 </div>
             </div>
         </div>
+      </div>
     </div>
     <!-- Site Footer -->
     <footer></footer>
