--- a/Final/resources/pages/list-item.html
+++ b/Final/resources/pages/list-item.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
+    <!--meta tags-->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A platform for RPI students to buy and sell items."
+    />
+    <!-- Latest compiled and minified bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css"
+    />
+    <!--Fonts and CSS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script src="../scripts/index.js" defer></script>
+    <!-- custom js -->
+    <title>Rensselaer List</title>
+  </head>
 
   <body>
     <!-- Site Header -->
@@ -82,65 +120,90 @@
               </li>
               <li class="nav-item black-line"></li>
               <li class="nav-item ps-3">
-                <a
-                  class="btn btn-primary nav-btn"
-                  href="list-item.html"
-                  role="button"
+                <a class="btn btn-primary nav-btn" href="#" role="button"
                   >Sell</a
                 >
               </li>
             </ul>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <div class="sign-up-form py-5">
-    <div class="container">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col">
-          <div class="card custom-card">
-            <div class="card-body">
-              <div class="row justify-content-center">
-                <div class="col">
-                  <h4 class="text-center">Sign up</h4>
-                  <form>
-                    <div class="input-group py-2 each-input">
-                      <span class="input-group-text">
-                        <i class="bi bi-person-circle"></i>
-                      </span>
-                      <input type="text" class="form-control" placeholder="Your Name" />
-                    </div>
+    <div class="sign-up-form py-5">
+      <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col">
+            <div class="card custom-card">
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col">
+                    <h4 class="text-center">Sell an Item</h4>
+                    <form>
+                      <div class="input-group">
+                        <label for="uploadFiles" class="form-label"
+                          >Upload Images</label
+                        >
+                      </div>
+                      <div class="input-group py-2 each-input">
+                        <input
+                          class="form-control"
+                          type="file"
+                          id="uploadFiles"
+                          multiple
+                        />
+                      </div>
 
-                    <div class="input-group py-2 each-input">
-                      <span class="input-group-text">
-                        <i class="bi bi-envelope-fill"></i></span>
-                      <input type="email" class="form-control" placeholder="Your RPI Email" />
-                    </div>
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-person-circle"></i>
+                        </span>
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Your Name"
+                        />
+                      </div>
 
-                    <div class="input-group py-2 each-input">
-                      <span class="input-group-text">
-                        <i class="bi bi-unlock-fill"></i>
-                      </span>
-                      <input type="password" class="form-control" placeholder="Enter Password" />
-                    </div>
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-envelope-fill"></i
+                        ></span>
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Your RPI Email"
+                        />
+                      </div>
 
-                    <div class="input-group py-2 each-input">
-                      <span class="input-group-text">
-                        <i class="bi bi-lock-fill"></i>
-                      </span>
-                      <input type="password" class="form-control" placeholder="Confirm Pasword" />
-                    </div>
-                    <div class="center-button py-4 each-input">
-                      <button type="button" class="btn btn-primary">
-                        Register
-                      </button>
-                    </div>
-                  </form>
-                </div>
-                <div class="col d-flex align-items-center">
-                  <img src="../images/sign-up-image.jpg" class="img-fluid" alt="Transaction Image" />
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-unlock-fill"></i>
+                        </span>
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Enter Password"
+                        />
+                      </div>
+
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-lock-fill"></i>
+                        </span>
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Confirm Pasword"
+                        />
+                      </div>
+                      <div class="center-button py-4 each-input">
+                        <button type="button" class="btn btn-primary">
+                          List your Item!
+                        </button>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
@@ -148,7 +211,6 @@
         </div>
       </div>
     </div>
-  </div>
 
     <!-- Modal For Signing in -->
     <div
@@ -211,9 +273,7 @@
         </div>
       </div>
     </div>
-  </div>
-  <!-- Site Footer -->
-  <footer></footer>
-</body>
-
+    <!-- Site Footer -->
+    <footer></footer>
+  </body>
 </html>
