--- a/Final/resources/pages/list-item.html
+++ b/Final/resources/pages/list-item.html
@@ -82,7 +82,7 @@
                   >Browse</a
                 >
                 <ul class="dropdown-menu">
-                  <li><a href="#" class="dropdown-item">All</a></li>
+                  <li><a href="browse.html" class="dropdown-item">All</a></li>
                   <li><a href="#" class="dropdown-item">New Items</a></li>
                   <li><a href="#" class="dropdown-item">By Category</a></li>
                   <li><a href="#" class="dropdown-item">Top Listings</a></li>
@@ -106,7 +106,7 @@
                 </div>
               </form>
               <li class="nav-item ms-lg-auto">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="signup.html">Sign Up</a>
               </li>
               <li class="nav-item pe-2">
                 <a
