--- a/Final/resources/pages/product-page.html
+++ b/Final/resources/pages/product-page.html
@@ -29,86 +29,59 @@
   <body>
     <!-- Site Header -->
     <header class="container-xxl">
-        <!-- Site Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <!-- Site logo -->
-            <a href="../../index.html" class="navbar-brand"><img class="RL-Logo"
-                    src="../images/Rensselear-List-Logo.png" alt="Rensselaer List Logo" /></a>
-            <!-- Nav button for mobile  -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
-                aria-controls="RL-Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Off Canvas Nav -->
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav flex-fill justify-content-between pt-2">
-                        <li class="nav-item dropdown ps-3">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Browse</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" class="dropdown-item">All</a></li>
-                                <li><a href="#" class="dropdown-item">New Items</a></li>
-                                <li><a href="#" class="dropdown-item">By Category</a></li>
-                                <li><a href="#" class="dropdown-item">Top Listings</a></li>
-                            </ul>
-                        </li>
-                        <form class="d-flex ms-lg-auto" role="search">
-                            <div class="input-group">
-                                <button class="btn btn-primary input-group-text" type="submit">
-                                    <i class="bi bi-search"></i>
-                                </button>
-                                <input class="form-control" size="35" type="search" placeholder="Search"
-                                    aria-label="Search" />
-                            </div>
-                        </form>
-                        <li class="nav-item ms-lg-auto">
-                            <a class="nav-link" href="#">Sign Up</a>
-                        </li>
-                        <li class="nav-item pe-2">
-                            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal"
-                                role="button">Log In</a>
-                        </li>
-                        <li class="nav-item black-line"></li>
-                        <li class="nav-item ps-3">
-                            <a class="btn btn-primary nav-btn" href="#" role="button">
-                            
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-              </form>
-              <li class="nav-item ms-lg-auto">
-                <a class="nav-link" href="#">Sign Up</a>
-              </li>
-              <li class="nav-item pe-2">
-                <a
-                  class="nav-link"
-                  href="#"
-                  data-bs-toggle="modal"
-                  data-bs-target="#log-in-modal"
-                  role="button"
-                  >Log In</a
-                >
-              </li>
-              <li class="nav-item black-line"></li>
-              <li class="nav-item ps-3">
-                <a
-                  class="btn btn-primary nav-btn"
-                  href="list-item.html"
-                  role="button"
-                  >Sell</a
-                >
-              </li>
-            </ul>
+      <!-- Site Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+          <!-- Site logo -->
+          <a href="../../index.html" class="navbar-brand"><img class="RL-Logo"
+                  src="../images/Rensselear-List-Logo.png" alt="Rensselaer List Logo" /></a>
+          <!-- Nav button for mobile  -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
+              aria-controls="RL-Navbar">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Off Canvas Nav -->
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
+              <div class="offcanvas-header">
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                  <ul class="navbar-nav flex-fill justify-content-between pt-2">
+                      <li class="nav-item dropdown ps-3">
+                          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                              aria-expanded="false">Browse</a>
+                          <ul class="dropdown-menu">
+                              <li><a href="browse.html" class="dropdown-item">All</a></li>
+                              <li><a href="#" class="dropdown-item">New Items</a></li>
+                              <li><a href="#" class="dropdown-item">By Category</a></li>
+                              <li><a href="#" class="dropdown-item">Top Listings</a></li>
+                          </ul>
+                      </li>
+                      <form class="d-flex ms-lg-auto" role="search">
+                          <div class="input-group">
+                              <button class="btn btn-primary input-group-text" type="submit">
+                                  <i class="bi bi-search"></i>
+                              </button>
+                              <input class="form-control" size="35" type="search" placeholder="Search"
+                                  aria-label="Search" />
+                          </div>
+                      </form>
+                      <li class="nav-item ms-lg-auto">
+                          <a class="nav-link" href="signup.html">Sign Up</a>
+                      </li>
+                      <li class="nav-item pe-2">
+                          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal"
+                              role="button">Log In</a>
+                      </li>
+                      <li class="nav-item black-line"></li>
+                      <li class="nav-item ps-3">
+                          <a class="btn btn-primary nav-btn" href="list-item.html" role="button">Sell</a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-        </div>
       </nav>
-    </header>
-    <!-- product details section -->
+  </header>
+  <!-- product details section -->
     <section class="container-xxl pt-5">
         <h2 class="sec-head-1 pb-3">Spongebob Chair</h2>
         <div class="row">
