HTML Errors Fixed

--- a/Final/resources/pages/browse.html
+++ b/Final/resources/pages/browse.html
@@ -88,23 +88,26 @@
                   <li><a href="#" class="dropdown-item">Top Listings</a></li>
                 </ul>
               </li>
-              <form class="d-flex ms-lg-auto" role="search">
-                <div class="input-group">
-                  <button
-                    class="btn btn-primary input-group-text"
-                    type="submit"
-                  >
-                    <i class="bi bi-search"></i>
-                  </button>
-                  <input
-                    class="form-control"
-                    size="35"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
-                </div>
-              </form>
+              <li class="nav-item ms-lg-auto">
+                <form role="search">
+                  <div class="input-group">
+                    <button
+                      class="btn btn-primary input-group-text"
+                      type="submit"
+                    >
+                      <i class="bi bi-search"></i>
+                    </button>
+                    <input
+                      class="form-control"
+                      size="35"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                  </div>
+                </form>
+              </li>
+
               <li class="nav-item ms-lg-auto">
                 <a class="nav-link" href="signup.html">Sign Up</a>
               </li>
@@ -634,12 +637,7 @@
                 <label for="email-input" class="form-label"
                   >Email address</label
                 >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email-input"
-                  aria-describedby="emailHelp"
-                />
+                <input type="email" class="form-control" id="email-input" />
               </div>
               <label for="password-input" class="form-label">Password</label>
               <div class="mb-3 input-group">
