--- a/Final/resources/pages/product-page.html
+++ b/Final/resources/pages/product-page.html
@@ -195,7 +195,7 @@
               <strong class="pe-3">Posted</strong> 10/14/2022
             </p>
             <p class="body-large strong pt-1">
-              <strong class="pe-3">Condition</strong>
+              <strong class="pe-3">Description</strong>
             </p>
             <p class="body-text">
               This is a super cool Spongebob chair. It is comfy and is good for
